# imac2-prog

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.MD  idee.md
assets/models/: aquarium.mtl  gem.mtl  goldie.mtl
assets/models/blender/: aquarium.blend  aquarium.blend1  boyo.blend  boyo.blend1  drone.blend  gem.blend  gem.blend1  goldie.blend  goldie.blend1  planet.blend  planet.blend1  rubio-high.blend  rubio-high.blend1  rubio-low.blend  rubio.blend  rubio.blend1  wall.blend  wall.blend1
assets/models/boyo/: boyo.mtl
assets/models/planet/: planet.mtl  planet2.mtl  rock.mtl
assets/models/rubio/: high.mtl  low.mtl  mat.mtl
assets/shaders/: cube.frag  monitor.frag  monitor.vert  phong.frag  shader.frag  shader.vert  shadow.frag
includes/: Boid.hpp  SecondOrderDynamics.hpp  data.hpp  simulation.hpp
includes/Programmation/: Boid.hpp  Space.hpp
includes/gfx/: BoidRenderer.hpp  BoidScene.hpp  Gui.hpp  Player.hpp  SecondOrderDynamics.hpp
includes/math/: binomial.hpp  enumerated.hpp  exponential.hpp  histogram.hpp  markov.hpp  normal.hpp  poisson.hpp  random.hpp  uniform.hpp  utils.hpp  variables.hpp
includes/math/random/: base_rng.hpp  binomial.hpp  enumerated.hpp  exponential.hpp  normal.hpp  poisson.hpp  random.hpp  uniform.hpp  utils.hpp
includes/prog/: Bait.hpp  Boid.hpp  BoidContainer.hpp  BoidSpace.hpp  BoidSpawner.hpp  Space.hpp  imgui-impl.hpp
sources/: Boid.cpp  data.cpp  main.cpp  simulation.cpp
sources/Porgrammation/: Boid.cpp  Space.cpp
sources/gfx/: BoidRenderer.cpp  BoidRenderer_assets.cpp  BoidScene.cpp  Gui.cpp  Player.cpp
sources/prog/: Boid.cpp  BoidContainer.cpp  BoidSpace.cpp  BoidSpawner.cpp  Space.cpp  imgui-impl.cpp
submodules/: totogl
tesperiment/: histograms.cpp  main.cpp  markov.cpp
tests/: math_formulas.cpp
vendors/: Eigen  TotoGL  totogl
ze-notes/: 3025-update-time-benchmark.csv  3025-update-time-benchmark.ods
